<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gmbuyi.temno.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.gmbuyi.temno.ui.send.SendFragment"
        android:label="@string/send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_request"
        android:name="com.gmbuyi.temno.ui.request.RequestFragment"
        android:label="@string/request"
        tools:layout="@layout/fragment_send" />
</navigation>