<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_grey"
        android:paddingHorizontal="15dp"
        android:paddingBottom="15dp"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="0.2"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_great"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:text="@string/welcome_back"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"

                android:layout_below="@+id/text_great"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/logout_btn"
                android:gravity="end|top"
                android:src="@drawable/ic_logout"
                tools:ignore="ContentDescription" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_contour"
            android:layout_weight="0.6"
            android:paddingHorizontal="15dp"
            android:paddingTop="30dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:id="@+id/total_balance_text"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/balance"
                android:textSize="30sp"
                android:layout_below="@+id/total_balance_text"
                android:layout_marginVertical="8dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/balance"
                android:layout_marginVertical="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/receive_balance"
                    android:layout_weight="0.5"
                    android:text="@string/currency_usd"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="16sp"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/send_balance"
                    android:layout_weight="0.5"
                    android:text="@string/private_acc"
                    android:gravity="center"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    />
            </LinearLayout>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>



    </LinearLayout>

    <include
        android:id="@+id/progress_bar_account"
        layout="@layout/progress_dialog"

        />




</androidx.constraintlayout.widget.ConstraintLayout>

